changes to image upload, new carousel images, search and added new thumbnails